# Elegant-Novel-Spider

./: .gitignore  README.md  aliases  config.yml.example  e  ens  ens.bat  ens.py  ens_config.example  pyproject.toml  requirements.txt  roadmap.md
docs/: filter.md  remote-dev.md  usage.md
ens/: __init__.py  __main__.py  api.py  cache.py  cli.py  config.py  console.py  dumper.py  exceptions.py  local.py  merge.py  models.py  paths.py  remote.py  state.py  status.py
ens/commands/: __init__.py  dump.py  dumper.py  fetch.py  info.py  local.py  remote.py  utils.py  web.py
ens/dumpers/: epub.py  mobi.py  txt.py
ens/remotes/: test.py
ens/resources/flask/static/js/: ens.js  jquery.min.js
ens/resources/flask/templates/: novel.html  shelf.html
ens/resources/man/: ens  ens-fetch  ens-local
ens/utils/: click.py  command.py  exec.py  misc.py  remote.py
src/ens/: __init__.py  __main__.py  api.py  cli.py  config.py  console.py  dumper.py  exceptions.py  local.py  merge.py  paths.py  remote.py  status.py  typing.py
src/ens/commands/: dump.py  dumper.py  fetch.py  gui.py  info.py  local.py  remote.py  test.py  topic.py  util.py  web.py
src/ens/dumpers/: __init__.py  epub.py  mobi.py  txt.py
src/ens/remotes/: test.py
src/ens/utils/: __init__.py  command.py  remote.py
src/resources/flask/static/: classic.css  ens.js
src/resources/flask/templates/: chap.html  novel.html  shelf.html
src/resources/man/: ens  ens-local
src/resources/topic/: filter.md
