[tool.poetry]
name = "elegant-novel-spider"
version = "2.1.1"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.5.1"
click = "^8.1.3"
PyYAML = "^6.0"
Flask = "^2.2.2"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
requests = "^2.28.1"
pycryptodome = "^3.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
