[tool.poetry]
name = "elegant-novel-spider"
version = "2.1.1"
description = ""
authors = ["syrinka <syrinka@foxmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
rich = "^12.5.1"
click = "^8.1.3"
Flask = "^2.2.2"
pydantic = {extras = ["dotenv"], version = "^1.9.2"}
loguru = "^0.6.0"
diskcache = "^5.4.0"
pyyaml = "^6.0.1"

[tool.poetry.dev-dependencies]

[tool.pyright]
include = ["ens"]

[tool.ruff]
include = ["ens"]
select = [
    "E", "W", # pycodestyle
    "B",      # flake8-bugbear
    "FBT",    # flake8-boolean-trap
    "COM",    # flake8-commas
    "Q",      # flake8-quotes
    "RSE",    # flake8-raise
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "FIX",    # flake8-fixme
    "PL",     # pylint
    "I",      # isort
]
ignore = [
    "F403",   # wildcard import
    "E501",   # limit char
    "ARG002", # unused argument
    "FIX004", # hack
    "B904",   # raise from
]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
